# pacman

./: NEWS  README  autogen.sh  meson.build
.builds/: arch.yml
build-aux/: git-version-gen.sh  version_stamp.sh
doc/: PKGBUILD.5.asciidoc  PKGBUILD.5.txt  makepkg.8.asciidoc  makepkg.8.txt  makepkg.conf.5.asciidoc  makepkg.conf.5.txt  meson.build
etc/: makepkg.conf.in
lib/libalpm/: alpm_version.h.in  meson.build
scripts/: Makefile.am  makepkg.sh.in  meson.build  pacman-db-upgrade.sh.in  pacman-key.sh.in  repo-add.sh.in
scripts/libmakepkg/: buildenv.sh.in
scripts/libmakepkg/buildenv/: debugflags.sh.in  makeflags.sh.in
scripts/libmakepkg/integrity/: generate_signature.sh.in  verify_signature.sh.in
scripts/libmakepkg/lint_config/: variable.sh.in
scripts/libmakepkg/lint_pkgbuild/: options.sh.in
scripts/libmakepkg/source/: git.sh.in
scripts/libmakepkg/tidy/: strip.sh.in
scripts/libmakepkg/util/: compress.sh.in  pkgbuild.sh.in  source.sh.in
src/pacman/: conf.c  pacman.c
src/util/: testpkg.c  vercmp.c
